Closed
Bug 707092
Opened 14 years ago
Closed 14 years ago
Crash [@ GetTopLevelWindowActiveState] printing "-moz-appearance: -moz-window-frame-left"
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: jruderman, Assigned: jimm)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(3 files, 1 obsolete file)
|
77 bytes,
text/html
|
Details | |
|
14.83 KB,
text/plain
|
Details | |
|
1.01 KB,
patch
|
Details | Diff | Splinter Review |
1. Load the testcase
2. Print (to file)
Result: Crash [@ GetTopLevelWindowActiveState]
| Reporter | ||
Comment 1•14 years ago
|
||
| Reporter | ||
Comment 2•14 years ago
|
||
There are a few crash reports per day with a matching signature. Most of the stacks are different or truncated, but they're crashing on the same source code line.
| Assignee | ||
Comment 3•14 years ago
|
||
I'll have to remember to use the test case of printing when working on this code. Thanks for reporting.
Assignee: nobody → jmathies
Attachment #578592 -
Flags: review?(netzen)
Comment 4•14 years ago
|
||
Comment on attachment 578592 [details] [diff] [review]
add null check on window ptr
Review of attachment 578592 [details] [diff] [review]:
-----------------------------------------------------------------
::: widget/src/windows/nsNativeThemeWin.cpp
@@ +89,5 @@
> // until it finds a real window.
> nsIWidget* widget = aFrame->GetNearestWidget();
> nsWindow * window = static_cast<nsWindow*>(widget);
> + if (!window)
> + return false;
nit: return 0;
Attachment #578592 -
Flags: review?(netzen) → review+
| Assignee | ||
Comment 6•14 years ago
|
||
Comment 7•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
You need to log in
before you can comment on or make changes to this bug.
Description
•