Bug 707092 - Add a null check and return proper constants on failure from GetTopLevelWindowActiveState, r=bbondy.